Fixed FilterConfig error; couldn't have ElementCollection within Embeddable; switched event_types and actions to comma-separated strings